--- a/client/styling/styles.scss
+++ b/client/styling/styles.scss
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  background-color: rgb(255, 241, 241);
 }
 
 .header-container {
@@ -8,8 +9,78 @@ body {
   justify-content: space-between;
 }
 
-.side-nav-container {
+.swipe-image {
+  max-width: 100%;
+}
+
+.main-page {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(196, 183, 199, 0.242);
+}
+
+.swipe-container {
+  margin-top: 50px;
+  width: 500px;
+  border: 1px solid black;
+  box-shadow: 4px 1px 8px 4px rgba(188, 185, 185, 0.717);
+}
+
+.swipe-info {
+  display: flex;
+  width: 400px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin-left: 2%;
+}
+
+.swipe-info span {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.75vw;
+}
+
+.swipe-text {
+  font-size: 1.5vw;
+  font-family: 'Oswald', sans-serif;
+}
+
+.swipe-profile {
+  background-color: lightblue;
+  overflow-wrap: break-word;
+}
+
+.button-container {
   background-color: antiquewhite;
+  display: flex;
+  justify-content: space-around;
+  border-top: 1px solid black;
+}
+
+.button-container button {
+  font-size: 5vw;
+  padding: 3% 6% 3% 6%;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.button-container button:hover {
+  opacity: 0.7;
+  transition: cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+.button-container button:active {
+  opacity: 0.9;
+  transition: cubic-bezier(0.23, 1, 0.32, 1);
+}
+
+#accept {
+  border: none;
+  background-color: rgba(172, 255, 172, 0.882);
+}
+
+#reject {
+  border: none;
+  background-color: rgba(238, 129, 129, 0.536);
 }
