--- a/client/styling/styles.scss
+++ b/client/styling/styles.scss
@@ -3,6 +3,7 @@ html {
   position: relative;
 }
 body {
+  font-family: 'Oswald', sans-serif;
   height: 100%;
   width: 100%;
   margin: 0px;
@@ -35,7 +36,7 @@ body {
 }
 
 .swipe-container {
-  margin-top: 50px;
+  margin-top: 15px;
   width: 500px;
   border: 1px solid black;
   box-shadow: 4px 1px 8px 4px rgba(188, 185, 185, 0.717);
@@ -43,10 +44,15 @@ body {
 
 .swipe-info {
   display: flex;
-  width: 400px;
   flex-direction: column;
   flex-wrap: wrap;
-  margin-left: 2%;
+}
+
+#swipe-bio {
+  margin: 0px;
+  max-width: 100%;
+  height: 150px;
+  overflow-y: auto;
 }
 
 .swipe-info span {
@@ -55,6 +61,7 @@ body {
 }
 
 .swipe-text {
+  padding-left: 2%;
   font-size: 1.5vw;
   font-family: 'Oswald', sans-serif;
 }
