--- a/client/styling/styles.scss
+++ b/client/styling/styles.scss
@@ -104,3 +104,52 @@ body {
   border: none;
   background-color: rgba(238, 129, 129, 0.536);
 }
+
+// login section
+
+#login-title {
+  font-size: 60px;
+  color: #ffffff;
+  font-weight: 700;
+  text-shadow: 0 0 5px #00bdb1, 0 0 10px #3adacf;
+}
+
+.login-main-container {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid black;
+}
+
+.login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  border: 2px solid #99ddfd;
+  box-shadow: 1px 1px 1px 1px #2b6f84;
+  width: 400px;
+  height: 400px;
+  font-size: 2vw;
+}
+.login-container input {
+  width: 20vw;
+  border-radius: 7px;
+}
+
+#signup {
+  font-size: 2vw;
+}
+
+//sign up
+
+.signup-main-container {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 1px solid black;
+}
